# -13785-

./: README.md
K230重要代码上交包_20260630/: 代码位置与上交说明.txt
K230重要代码上交包_20260630/kmodel_export/: README.md
K230重要代码上交包_20260630/kmodel_export/face_detection/gmodel_dump_dir/27/: arg.sc  arg.txt  gmodel.desc  gmodel.pc_addr_ctrl
K230重要代码上交包_20260630/kmodel_export/face_detection/onnx/: FaceDetector.onnx  face_detect_640.kmodel
K230重要代码上交包_20260630/kmodel_export/face_recognition/gmodel_dump_dir/0/: arg.sc  arg.txt  gmodel.desc  gmodel.pc_addr_ctrl
K230重要代码上交包_20260630/kmodel_export/face_recognition/onnx/: MobileFaceNet.onnx
K230重要代码上交包_20260630/kmodel_export/face_recognition/tmp/7_TargetDependentAfterQuantPass/10_FusionToTirPass/: final_main.dot
K230重要代码上交包_20260630/kmodel_export/face_recognition/tmp/mobile_face/: simplified.onnx
K230重要代码上交包_20260630/kmodel_export/k230_kmodel/: face_recognize.kmodel
K230重要代码上交包_20260630/kmodel_inference/: CMakeLists.txt  README.md  build_app.sh
K230重要代码上交包_20260630/kmodel_inference/face_access_system/: CMakeLists.txt  README.md  access_control_main.cc  capture_display_main.cc  face_access_common.h  face_ai_main.cc  face_recognition.cc  face_recognition.h  start_face_access.sh  stop_face_access.sh
K230重要代码上交包_20260630/kmodel_inference/face_access_system/linux_service/: server.py  start_web.sh  start_web_adb.sh
K230重要代码上交包_20260630/kmodel_inference/face_detection/: main.cc
K230重要代码上交包_20260630/kmodel_inference/face_recognition/: README.md  face_recognition.cc  face_recognition.h  main.cc  vi_vo.h
